[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/ruleset_icons/ruleset_tile_full.png" type="Texture" id=1]
[ext_resource path="res://assets/styles/subscribe_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/spinbuttons.png" type="Texture" id=4]
[ext_resource path="res://src/nodes/PartFrameControl.gd" type="Script" id=5]

[node name="PartFrameControl" type="TextureRect"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
texture = ExtResource( 1 )
script = ExtResource( 5 )
BG_COLOR = Color( 0.301961, 0.4, 0.4, 0.447059 )
BG_COLOR2 = Color( 0.160784, 0.172549, 0.219608, 0.67451 )

[node name="RandomLabel" type="Label" parent="."]
margin_top = 28.0
margin_right = 36.0
margin_bottom = 46.0
rect_min_size = Vector2( 36, 18 )
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="SpinRect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -20.0
margin_bottom = -4.0
texture = ExtResource( 4 )
stretch_mode = 3

[node name="BlockingOverlay" type="ColorRect" parent="."]
visible = false
margin_right = 48.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
color = Color( 0.321569, 0.333333, 0.352941, 0.87451 )

[connection signal="gui_input" from="." to="." method="_on_PartFrameControl_gui_input"]
[connection signal="gui_input" from="SpinRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="gui_input" from="BlockingOverlay" to="." method="_on_BlockingOverlay_gui_input"]
